# AGIAgentic

./: .gitignore  README.md
AGIAgentic-backend/: .gitignore  README.md  main.py  mcp_config.json  pyproject.toml  test.env
AGIAgentic-backend/_mcp/: README.md  client.py  manager.py
AGIAgentic-backend/api/: __init__.py  health_api.py  llm_api.py  mcp_api.py  plan_executor_api.py  tool_api.py
AGIAgentic-backend/api/schemas/: plan_executor.py
AGIAgentic-backend/common/: logger.py
AGIAgentic-backend/conf/: config.py  setting.py
AGIAgentic-backend/docs/: astream_events.md
AGIAgentic-backend/envs/: development.env  production.env
AGIAgentic-backend/graph/: base_graph.py  plan_graph.py
AGIAgentic-backend/graph/states/: base_state.py  plan_state.py
AGIAgentic-backend/llms/: __init__.py
AGIAgentic-backend/llms/providers/: __init__.py  zhipu.py
AGIAgentic-backend/mcp/: client.py
AGIAgentic-backend/prompts/: plan_executor_prompt.py
AGIAgentic-backend/services/: llm.py  mcp.py  tool.py
AGIAgentic-backend/tools/: __init__.py  time_tool.py
AGIAgentic-backend/utils/: json_util.py
AGIAgentic-backend/utils/auth/: jwt_token.py
AGIAgentic-backend/utils/feature/: overlad_test.py  sniffio_test.py
AGIAgentic-backend/utils/llm/: llm_util.py
AGIAgentic-backend/utils/mcp_/: mcp_util.py
AGIAgentic-backend/utils/tool/: tool_util.py
AGIAgentic-frontend/: README.md  package-lock.json  package.json  vite.config.js
AGIAgentic-frontend/src/: App.vue
AGIAgentic-frontend/src/assets/: main.css
AGIAgentic-frontend/src/components/: PlanExecutor.vue
