[project]
name = "agiagentic-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.122.0",
  "langchain>=1.1.0",
  "langchain-mcp-adapters>=0.1.14",
  "loguru>=0.7.3",
  "openai>=2.8.1",
  "socksio>=1.0.0",
  "pytz>=2025.2",
  "langchain-openai>=1.1.0"
]
